Move all Java options to setenv.sh